--- a/ODK.Web.Razor/Pages/Account/Delete.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Delete.cshtml
@@ -2,6 +2,7 @@
 @attribute [Authorize]
 @using Microsoft.AspNetCore.Authorization
 @using ODK.Web.Common.Components
+@using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Account
 @using ODK.Web.Razor.Models.Components
 @model ODK.Web.Razor.Pages.Account.DeleteModel
@@ -15,7 +16,7 @@
     Title = "Account",
     Content = await Html.PartialAsync("Account/_SiteAccountLayout", new SiteAccountLayoutViewModel
     {
-        Active = "/Account/Delete",
+        Active = OdkRoutes.Account.Delete(null),
         Content = 
             @<div>
                 <h2>Delete account</h2>
