--- a/ODK.Web.Razor/Pages/Shared/_SiteAdminLayout.cshtml
+++ b/ODK.Web.Razor/Pages/Shared/_SiteAdminLayout.cshtml
@@ -19,7 +19,8 @@
         new MenuItem { Link = "/superadmin/groups", Text = "Groups" },
         new MenuItem { Link = "/superadmin/messages", Text = "Messages" },
         new MenuItem { Link = "/superadmin/payments", Text = "Payments" },
-        new MenuItem { Link = "/superadmin/subscriptions", Text = "Subscriptions" }
+        new MenuItem { Link = "/superadmin/subscriptions", Text = "Subscriptions" },
+        new MenuItem { Link = "/superadmin/topics", Text = "Topics" }
     };
 }
 
