--- a/ODK.Web.Razor/Pages/SuperAdmin/Email.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/Email.cshtml
@@ -1,4 +1,6 @@
-﻿@page "/SuperAdmin/Emails/{type}"
+﻿@page "/superadmin/emails/{type}"
+@attribute [Authorize]
+@using Microsoft.AspNetCore.Authorization
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Common.Components
 @using ODK.Web.Razor.Models.SuperAdmin
