--- a/ODK.Web.Razor/Pages/SuperAdmin/Errors.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/Errors.cshtml
@@ -1,4 +1,6 @@
-﻿@page "/SuperAdmin/Errors"
+﻿@page "/superadmin/errors"
+@attribute [Authorize]
+@using Microsoft.AspNetCore.Authorization
 @using ODK.Web.Razor.Models.Components
 @model ErrorsModel
 @{
