--- a/ODK.Web.Razor/Pages/SuperAdmin/Feature.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/Feature.cshtml
@@ -1,4 +1,6 @@
-﻿@page "/SuperAdmin/Features/{id:guid}"
+﻿@page "/superadmin/features/{id:guid}"
+@attribute [Authorize]
+@using Microsoft.AspNetCore.Authorization
 @using ODK.Web.Common.Components
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Models.SuperAdmin
