--- a/ODK.Web.Razor/Pages/SuperAdmin/Features.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/Features.cshtml
@@ -1,4 +1,6 @@
 ﻿@page "/superadmin/features"
+@attribute [Authorize]
+@using Microsoft.AspNetCore.Authorization
 @using ODK.Web.Razor.Models.Components
 @model FeaturesModel
 @{
