--- a/ODK.Web.Razor/Pages/SuperAdmin/Groups.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/Groups.cshtml
@@ -1,4 +1,6 @@
 ﻿@page "/superadmin/groups"
+@attribute [Authorize]
+@using Microsoft.AspNetCore.Authorization
 @using ODK.Services.Chapters
 @using ODK.Web.Common.Extensions
 @using ODK.Web.Razor.Models.Components
