--- a/ODK.Web.Razor/Pages/SuperAdmin/Message.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/Message.cshtml
@@ -1,4 +1,6 @@
 ﻿@page "/superadmin/messages/{id:guid}"
+@attribute [Authorize]
+@using Microsoft.AspNetCore.Authorization
 @using ODK.Services.Contact
 @model MessageModel
 @inject IContactAdminService ContactAdminService
