--- a/ODK.Web.Razor/Pages/SuperAdmin/Payments.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/Payments.cshtml
@@ -1,4 +1,6 @@
 ﻿@page "/superadmin/payments"
+@attribute [Authorize]
+@using Microsoft.AspNetCore.Authorization
 @using ODK.Services.Settings
 @using ODK.Web.Common.Extensions
 @using ODK.Web.Razor.Models.Components
