--- a/ODK.Web.Razor/Views/Shared/Account/_AccountMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_AccountMenu.cshtml
@@ -14,10 +14,11 @@
             ? new MenuItem { Link = OdkRoutes.Account.Profile(Model.Chapter), Text = "Profile" }
             : new MenuItem(),
         new MenuItem { Link = OdkRoutes.Account.Picture(Model.Chapter), Text = "Picture" },
+        Model.Chapter == null
+            ? new MenuItem { Link = OdkRoutes.Account.Interests(), Text = "My interests" }
+            : new MenuItem(),
         new MenuItem { Link = OdkRoutes.Account.Conversations(Model.Chapter), Text = "My conversations" },
-        Model.Chapter != null
-            ? new MenuItem { Link = OdkRoutes.Account.Subscription(Model.Chapter), Text = "My subscription" }
-            : new MenuItem { Link = OdkRoutes.Account.Subscription(null), Text = "My subscription" },
+        new MenuItem { Link = OdkRoutes.Account.Subscription(Model.Chapter), Text = "My subscription" },
         new MenuItem { Link = OdkRoutes.Account.Payments(Model.Chapter), Text = "My payments" },
         new MenuItem { Link = OdkRoutes.Account.EmailAddressChange(Model.Chapter), Text = "Email address" },
         new MenuItem { Link = OdkRoutes.Account.PasswordChange(Model.Chapter), Text = "Password" },
