--- a/ODK.Web.Razor/Pages/SuperAdmin/EmailProvider.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/EmailProvider.cshtml
@@ -1,4 +1,6 @@
-﻿@page "/SuperAdmin/EmailProviders/{id:guid}"
+﻿@page "/superadmin/emailproviders/{id:guid}"
+@attribute [Authorize]
+@using Microsoft.AspNetCore.Authorization
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Common.Components
 @model EmailProviderModel
