--- a/ODK.Web.Razor/Pages/SuperAdmin/FeatureCreate.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/FeatureCreate.cshtml
@@ -1,4 +1,6 @@
-﻿@page "/SuperAdmin/Features/Create"
+﻿@page "/superadmin/features/create"
+@attribute [Authorize]
+@using Microsoft.AspNetCore.Authorization
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Common.Components
 @model FeatureCreateModel
