--- a/ODK.Web.Razor/Pages/SuperAdmin/SubscriptionCreate.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/SubscriptionCreate.cshtml
@@ -1,4 +1,6 @@
 ﻿@page "/SuperAdmin/Subscriptions/Create"
+@attribute [Authorize]
+@using Microsoft.AspNetCore.Authorization
 @using ODK.Web.Common.Components
 @using ODK.Web.Razor.Models.Components
 @model ODK.Web.Razor.Pages.SuperAdmin.SubscriptionCreateModel
