--- a/ODK.Web.Razor/wwwroot/css/_slim-select.scss
+++ b/ODK.Web.Razor/wwwroot/css/_slim-select.scss
@@ -1,5 +1,8 @@
 ﻿/*Style SlimSelect like Bootstrap 5*/
 .ss-main {    
+    // for positioning the deselect icon
+    display: flex;
+
     .ss-arrow {
         display: none;
     }
