--- a/ODK.Web.Razor/wwwroot/css/main.css
+++ b/ODK.Web.Razor/wwwroot/css/main.css
@@ -11853,6 +11853,9 @@ textarea.form-control-lg {
 }
 
 /*Style SlimSelect like Bootstrap 5*/
+.ss-main {
+  display: flex;
+}
 .ss-main .ss-arrow {
   display: none;
 }
