--- a/ODK.Web.Razor/Views/Shared/Header/_SiteHeader.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_SiteHeader.cshtml
@@ -18,6 +18,7 @@
         </div>
 
         <div class="d-flex gap-4">
+            @await Html.PartialAsync("Header/_SiteTasksDropdown")
             @await Html.PartialAsync("Header/_NotificationDropdown")
             @await Html.PartialAsync("Header/_SiteAccountDropdown")
         </div>
