--- a/ODK.Web.Razor/wwwroot/css/main.css
+++ b/ODK.Web.Razor/wwwroot/css/main.css
@@ -11963,12 +11963,15 @@ html[data-platform=odk] {
 html[data-platform=odk] {
   --odk-badges-padding-top: 0.5rem;
   --odk-badges-line-height: 0.5;
+  padding-top: var(--odk-badges-padding-top);
+  line-height: var(--odk-badges-line-height);
 }
 
 .badge {
-  padding-top: var(--odk-badges-padding-top);
   z-index: 1;
-  line-height: var(--odk-badges-line-height);
+}
+.badge.badge-sm {
+  font-size: 0.6em;
 }
 
 html[data-platform=odk] {
@@ -12372,7 +12375,6 @@ html[data-platform=odk] {
 .notification-item {
   --odk-notification-item-padding-y: 1rem;
   --odk-notification-item-padding-x: var(--bs-dropdown-item-padding-x);
-  border-top: 1px solid var(--bs-border-color);
   padding: 0;
   cursor: default;
 }
